--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,10 +24,10 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overwiew">
-            <h1>New York</h1>
+            <h1 id="city"></h1>
             <ul>
-              <li>Friday 6:00</li>
-              <li>Clear</li>
+              <li>Last updated:<span id="date"></span></li>
+              <li id="description"></li>
             </ul>
             <div class="row">
               <div class="col-6">
@@ -38,15 +39,15 @@
                   />
 
                   <div class="float-start">
-                    <strong>21</strong> <span class="units">℃ | ℉</span>
+                    <strong id="temperature"></strong>
+                    <span class="units">℃ | ℉</span>
                   </div>
                 </div>
               </div>
               <div class="col-6">
                 <ul>
-                  <li>Precipation: 0%</li>
-                  <li>Humidity: 73%</li>
-                  <li>Wind: 2km/h</li>
+                  <li>Humidity: <span id="humidity"></span>%</li>
+                  <li>Wind: <span id="wind"></span>km/h</li>
                 </ul>
               </div>
             </div>
