--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="overwiew">
             <h1 id="city"></h1>
             <ul>
-              <li>Last updated:<span id="date"></span></li>
+              <li>Last updated: <span id="date"></span></li>
               <li id="description"></li>
             </ul>
             <div class="row">
@@ -49,6 +49,22 @@
                   <li>Humidity: <span id="humidity"></span>%</li>
                   <li>Wind: <span id="wind"></span>km/h</li>
                 </ul>
+              </div>
+              <div class="weather-forecast">
+                <div class="row">
+                  <div class="col-2">
+                    <div class="weather-forecast-date">Thu</div>
+                    <img
+                      src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                      alt=""
+                      width="42"
+                    />
+                    <div class="weather-forecast-temperature">
+                      <span class="weather-forecast-temperature-max">18 </span>
+                      <span class="weather-forecast-temperature-min">12</span>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
             <small>
