--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                   <img
                     src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
                     alt="Clear"
+                    id=""
                     class="float-start"
                   />
 
@@ -50,7 +51,7 @@
                   <li>Wind: <span id="wind"></span>km/h</li>
                 </ul>
               </div>
-              <div class="weather-forecast">
+              <div class="weather-forecast" id="forecast">
                 <div class="row">
                   <div class="col-2">
                     <div class="weather-forecast-date">Thu</div>
@@ -67,17 +68,14 @@
                 </div>
               </div>
             </div>
-            <small>
-              <a
-                href="https://github.com/KarolinaTya/Weather-app2"
-                target="_blank"
-              >
-                Open-source code</a
-              >
-              by Karolina Łaniewska
-            </small>
           </div>
         </div>
+        <small>
+          <a href="https://github.com/KarolinaTya/Weather-app2" target="_blank">
+            Open-source code</a
+          >
+          by Karolina Łaniewska
+        </small>
       </div>
     </div>
     <script src="src/app.js"></script>
