--- a/index.html
+++ b/index.html
@@ -32,12 +32,7 @@
             <div class="row">
               <div class="col-6">
                 <div class="clearfix weather-temperature">
-                  <img
-                    src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-                    alt="Clear"
-                    id=""
-                    class="float-start"
-                  />
+                  <img src="" alt="Clear" id="icon" class="float-start" />
 
                   <div class="float-start">
                     <strong id="temperature"></strong>
