--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 
                   <div class="float-start">
                     <strong id="temperature"></strong>
-                    <span class="units">℃ | ℉</span>
+                    <span class="units"
+                      >℃ 
                   </div>
                 </div>
               </div>
