--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
                   <div class="float-start">
                     <strong id="temperature"></strong>
                     <span class="units"
-                      >℃ 
+                      ><a href="#" id="celsius-link" class="active">°C</a> |
+                      <a href="#" id="fahrenheit-link">°F</a></span
+                    >
                   </div>
                 </div>
               </div>
@@ -67,23 +69,8 @@
                   <li>Wind: <span id="wind"></span>km/h</li>
                 </ul>
               </div>
-              <div class="weather-forecast" id="forecast">
-                <div class="row">
-                  <div class="col-2">
-                    <div class="weather-forecast-date">Thu</div>
-                    <img
-                      src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-                      alt=""
-                      width="42"
-                    />
-                    <div class="weather-forecast-temperature">
-                      <span class="weather-forecast-temperature-max">18 </span>
-                      <span class="weather-forecast-temperature-min">12</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
             </div>
+            <div class="weather-forecast" id="forecast"></div>
           </div>
         </div>
         <small>
